# up-the-stairs

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
data/motion_samples/up_the_stairs_v1/: 11_02_2023_12_31_03.csv  11_02_2023_12_31_03.txt
data/prototypes/up_the_stairs_v1/: 0.npy  0_rgng.npy  1.npy  1_rgng.npy  1_step_prototypes.npy  2.npy  2_rgng.npy  3.npy  3_rgng.npy  4.npy  4_rgng.npy  5.npy  5_rgng.npy  action_prototypes.npy  config.yaml  effect_based_rgng.npy  uniform_prototypes.npy
launch/: as_launch.launch  auto_train.launch  four_steps.launch  spawn_sdf.launch  up_the_stairs.launch
models/bd_droid/: model.config  model.sdf
models/four_steps/: model.config  model.sdf
models/plane/: model.config  model.sdf
models/stairs/: model.config  model.sdf
rl/: dqn.py  dqn.yaml  dqn_random.py  dqn_random.yaml  sac.py  sac.yaml
scripts/: action_prototype_gen.py  backtostart.py  collect_data.py  get_robot_info.py  jump_node.py  pub_rviz_stairs.py  record_trajectories.py  robot_tf2_broadcast.py  set_start_position.py  test_wrench_angle.py
scripts/common/: motion_prototypes.py
scripts/common/gym_env/: GazeboGymWrapper.py  GazeboGymWrapperContinuous.py
scripts/common/rgng/: RGNG_network.py  gng.py  rgng.py
singularity/: up_the_stairs.def
srv/: ActionPrototypeGen.srv  Jump.srv  PerformActionPrototype.srv  Rollout.srv  RolloutGaussian.srv  SetStart.srv
worlds/: four_steps.world  staircase.world
